# codebuild

./: .dockerignore  .gitignore  Dockerfile  README.md  buildspec.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
